frontend/test/should_pass/edge_012.grg
using edge_model_003;
