frontend/test/should_fail/constr_002.grg
using constr_model_002;
